css/portfolio.css
.cell {
    /* background-color: lightcoral; */
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    overflow: hidden;
    margin-bottom: 1rem;
}

.thumbnail {
    display: flex;
    justify-content: center;
    align-items: center;
}

.projectImg {
    position: relative;
    z-index: -1;
    /* top: 0; */
}

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.2);
    z-index: 3;
    /* top: 0; */
    font-size: 30px;
    /* text-shadow: 2px 1px 2px rgba(0,0,0,0.75); */
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 1;
    transition: background-color ease-in-out 0.5s;
}

.overlay:hover {
    color: #fff;
    background-color: rgba(0,0,0,0.5);
    /* opacity: 0; */
    transition: background-color ease-in-out 0.5s;
}

.overlay:active, .overlay:focus {
    color: #fff;
}

.overlay-box {
    position: relative;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.2);
    z-index: 10;
}

/* .title {
    position: absolute;
    z-index: 4;
    font-size: 30px;
    color: #fff;
} */

